--- a/dolist.css
+++ b/dolist.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 
 * {
   margin: 0;
@@ -106,4 +106,4 @@ input {
 
 .btn_add:hover {
   opacity: 0.9;
-}
+} */
