--- a/index.css
+++ b/index.css
@@ -160,59 +160,8 @@ section,.wrap {
     animation-iteration-count: infinite;
     animation-name: gradients;
  } 
-.form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  transition: 200ms ease-in-out;
-  border: 1px solid black;
-  border-radius: 10px;
-  z-index: 10;
-  background-color: white;
-  width: 500px;
-  max-width: 80%;
-}
 
-.form.active {
-  transform: translate(-50%, -50%) scale(1);
-}
 
-.form-header {
-  padding: 10px 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid black;
-}
-
-.form-header .title {
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.form-header .close-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.form-section {
-  padding: 10px 15px;
-}
-
-/* #textArea {
-  background: url(images/notebook.png) repeat-y;
-  width: 600px;
-  height: 300px;
-  font: normal 14px verdana;
-  line-height: 25px;
-  padding: 2px 10px;
-  border: solid 1px #ddd;
-} */
 #logo {
   margin: auto;
   display: block;
@@ -239,7 +188,7 @@ h1 {
 
 .buttonn {
   font-size: 1em;
-  color: #fff;
+  color: rgb(16, 9, 9);
   border-radius: 20px/50px;
   text-decoration: none;
   cursor: pointer;
@@ -247,7 +196,11 @@ h1 {
 }
 
 .buttonn:hover {
-  background: #06D85F;
+  background: linear-gradient(to right, #054F7D, #00A7CF, #861A54, #054F7D);
+  background-size: 600%;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-name: gradients;
 }
 
 .over {
@@ -312,11 +265,6 @@ h1 {
   }
 }
 
-
-/* .popup{
-  background-color: rgba(0,0,0,0.5);
-} */
-
 /* brain dump popup box */
 .popup {
   background-color: rgba(0, 0, 0, 0.5);
@@ -333,12 +281,12 @@ h1 {
   text-align: center;
 }
 
-.popup button {
+#close {
   display: block;
-  margin: 0 0 20px auto;
+  /* margin: 0 0 20px auto; */
   background-color: transparent;
   font-size: 30px;
-  color: #a12424;
+  color: #2443a1;
   border: none;
   outline: none;
   cursor: pointer;
@@ -520,3 +468,4 @@ a {
 }
 
 /* envelope -------------------->*/
+
